k8s-235/apps/mediaserver/overlays/prod/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediaserver
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - plex.tdude.co
    - sonarr.tdude.co
    - radarr.tdude.co
    - jackett.tdude.co
    - qbittorrent.tdude.co
    - tautulli.tdude.co
    secretName: mediaserver-k8s-235-tdude-co-tls
  rules:
  - host: plex.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-plex
            port:
              name: pms
  - host: sonarr.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              name: http
  - host: radarr.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              name: http
  - host: jackett.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              name: http
  - host: qbittorrent.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              name: http
  - host: tautulli.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tautulli
            port:
              name: http
